add notice and QnA, change community, chage navbar

--- a/chat.html
+++ b/chat.html
@@ -28,14 +28,11 @@
     href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Jua&family=Square+Peg&family=Water+Brush&family=Yanone+Kaffeesatz:wght@700&display=swap"
     rel="stylesheet"
   />
-
-
-
     <link href="./css/main_styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/chat.css" />
   </head>
   <body>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="./main.html"
           ><img src="assets/img/logo.png" alt="..."
@@ -58,7 +55,13 @@
               <a class="nav-link" href="./product.html">물건 보기</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./community.html">커뮤니티</a>
+              <a class="nav-link" href="./facility.html">시설 보기</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./notice.html">공지사항</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./qna.html">Q&A</a>
             </li>
             <li class="nav-item">
               <input
