--- a/edit.html
+++ b/edit.html
@@ -56,7 +56,13 @@
               <a class="nav-link" href="./product.html">물건 보기</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./community.html">커뮤니티</a>
+              <a class="nav-link" href="./facility.html">시설 보기</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./notice.html">공지사항</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./qna.html">Q&A</a>
             </li>
             <li class="nav-item">
               <input
