--- a/main.html
+++ b/main.html
@@ -72,7 +72,13 @@
               <a class="nav-link" href="#item">물건 보기</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">커뮤니티</a>
+              <a class="nav-link" href="#facility">시설 보기</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./notice.html">공지사항</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./qna.html">Q&A</a>
             </li>
             <li class="nav-item">
               <input
@@ -221,12 +227,12 @@
       </div>
     </section>
     <div id="main_product_info"></div>
-    <section class="page-section" id="about">
+    <section class="page-section" id="facility">
       <div class="container">
         <div class="text-center">
           
           <h2 class="section-heading text-uppercase">우리동네 방방곡곡</h2>
-           <a type="button" class="btn btn-primary" href="./community.html" style="margin-bottom: 20px">둘러보기</a>
+           <a type="button" class="btn btn-primary" href="./facility.html" style="margin-bottom: 20px">둘러보기</a>
           <h3 class="section-subheading text-muted"></h3>
         </div>
         <ul class="timeline">
