change notice and QnA HTML

--- a/detail.html
+++ b/detail.html
@@ -26,7 +26,7 @@
   />
     <link rel="stylesheet" href="./css/detail.css" />
     <link rel="stylesheet" href="./css/main_styles.css" />
-    <title>Document</title>
+    <title>Chungbuk Market Place</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
