--- a/facility.html
+++ b/facility.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <title>Chungbuk Market Place</title>
   <!--페이지 설명-->
   <meta name="description" content="충북대학교 주변 식당 찾아보기">
   <!--네이버 서치 어드바이저-->
