불필요한 test html 삭제 , product에서 upload 이동 개선

--- a/main.html
+++ b/main.html
@@ -74,6 +74,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">커뮤니티</a>
             </li>
+            <!-- 로그인 양식-->
             <li class="nav-item">
               <input
                 class="btn btn-primary"
@@ -82,26 +83,27 @@
                 value="로그인"
                 onclick="openLoginForm()"
               />
-              <div class="form-popup" id="myForm_login">
-                <form action="/action_page.php" class="form-container">
+              <div class="form-popup" id="myForm_login" >
+                <form action="login.php" class="form-container"  method="post">
                   <h1>로그인</h1>
                   <label for="email"><b>아이디</b></label>
                   <input
                     type="email"
                     placeholder="Enter ID"
-                    name="email"
-                    id="email"
+                    name="id"
+                    id="id"
                     required
                   />
                   <label for="psw"><b>비밀번호</b></label>
                   <input
                     type="password"
                     placeholder="Enter Password"
-                    name="psw"
+                    name="pw"
                     id="pw"
                     required
                   />
-                  <input type="button" class="btn" id="login" value="로그인"></button>
+                 
+                  <input type="submit" class="btn" id="login" value="로그인"></button>
                   <button
                     type="button"
                     class="btn cancel"
@@ -117,6 +119,8 @@
                 id="btn-logout"
                 value="로그아웃"
               />
+
+              <!-- 회원가입 양식-->
               <input
                 class="btn btn-primary"
                 type="button"
@@ -124,8 +128,9 @@
                 value="회원가입"
                 onclick="openRegisterForm()"
               />
+
               <div class="form-popup" id="myForm_register">
-                <form action="/action_page.php" class="form-container">
+                <form action="register.php" class="form-container"  method="post">
                   <h1>회원가입</h1>
                   <label for="name-new"><b>이름</b></label>
                   <input
@@ -151,7 +156,23 @@
                     id="pw-new"
                     required
                   />
-                  <input type="button" class="btn" id="register" value="회원가입"></button>
+                  <label for="email"><b>주소</b></label>
+                  <input
+                  type="text"
+                    placeholder="Enter Address"
+                    name="address"
+                    id="address-new"
+                    required
+                  />
+                  <label for="psw"><b>전화번호</b></label>
+                  <input
+                  type="text"
+                    placeholder="Enter Phone Number"
+                    name="pn"
+                    id="pn-new"
+                    required
+                  />
+                  <input type="submit" class="btn" id="register" value="회원가입"></button>
                   <button
                     type="button"
                     class="btn cancel"
