--- a/product.html
+++ b/product.html
@@ -143,7 +143,7 @@
     </nav>
     <div class="container mt-3" id="item_list"></div>
     <div style="text-align: center; margin-bottom: 20px">
-      <a type="button" class="btn btn-primary" href="/upload.html">등록하기</a>
+      <a type="button" class="btn btn-primary" href="/DataBase-Project/upload.html">등록하기</a>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
@@ -172,6 +172,6 @@
     <script src="./js/open_loginForm.js"></script>
     <script src="./js/open_registerForm.js"></script>   
     <script src="./js/navbar.js"></script>
-    <script src="./js/product.js"></script>
+    <!-- <script src="./js/product.js"></script> -->
   </body>
 </html>
